WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14416
[CAIRO] Content does not render fully in some cases (eg. slashdot.org)
https://bugs.webkit.org/show_bug.cgi?id=14416
Summary
[CAIRO] Content does not render fully in some cases (eg. slashdot.org)
Alp Toker
Reported
2007-06-26 11:50:09 PDT
This at first appeared to be a clipping bug. Turns out it is caused by mismatched save/restore on the graphics context due to an early return.
Attachments
Fix mismatched calls to cairo_save/restore
(1.33 KB, patch)
2007-06-26 11:56 PDT
,
Alp Toker
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alp Toker
Comment 1
2007-06-26 11:56:04 PDT
Created
attachment 15254
[details]
Fix mismatched calls to cairo_save/restore
Anders Carlsson
Comment 2
2007-06-26 15:33:39 PDT
Comment on
attachment 15254
[details]
Fix mismatched calls to cairo_save/restore r=me
Anders Carlsson
Comment 3
2007-06-26 16:10:08 PDT
Committed revision 23800.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug