        Reviewed and landed by Anders.

http://bugs.webkit.org/show_bug.cgi?id=14416
        Content does not render fully in some cases

        Fix mismatched calls to cairo_save/restore due to an early method return.

        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (WebCore::GraphicsContext::drawLine):



Canonical link: https://commits.webkit.org/18577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@23800 268f45cc-cd09-0410-ab3c-d52691b4dbfc